# null-ls-test-repo

./: README.md  init.lua  pyproject.toml  requirements-dev.txt  requirements.txt
dir/subdir/: test.py
lua/user/lsp/: init.lua
lua/user/lsp/null-ls/: init.lua
lua/user/lsp/null-ls/custom/formatters/: darker.lua
